cambiar titulos dde filtrado

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       </header>
       <section class="funciones">
         <div class="ordenarBuscar">
-          <p class="pFunciones">Ordenar por</p>
+          <p class="pFunciones">Ordenar por año de publicación</p>
           <select name="ordenarPor" id="ordenarPor" class="input">
             <option value="default"></option>
             <option value="ascendente" id="asc">ascendente</option>
@@ -30,7 +30,7 @@
           </select>
         </div>
         <div class="ordenarBuscar">
-          <p class="pFunciones">Buscar por</p>
+          <p class="pFunciones">Buscar por director o título</p>
           <input type="search" id="search" class="input">
         </div>
       </section>
